# chuk-mcp-math

./: .coverage  .coverage_subprocess  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  PATTERNS.md  PRINCIPLES.md  README.md  ROADMAP.md  RUN_ALL_DEMOS.sh  TESTING_PATTERNS.md  coverage.json  hello.py  pyproject.toml  test_cli.py
.github/workflows/: publish.yml  test.yml
demos/: DEMO.py  comprehensive_demo.py  comprehensive_demo_01_arithmetic.py  demo_01_arithmetic.py  demo_02_number_theory.py  demo_03_trigonometry.py  demo_04_geometry_stats.py  quick_comprehensive_test.py  quick_demo.py  run_all_demos.py
diagnostics/: README.md  async_arithmetic_diagnostics.py  debug_trig.py  diagnose_reorganized_structure.py  inspect_function_types.py  reorganization_success_demo.py  simple_diagnostic.py
docs/testing/: INTEGRATION_TESTING.md  MATH_PATTERNS.md  PERFORMANCE_TESTING.md  TESTING.md  TEST_COVERAGE.md  UNIT_TESTING.md
examples/: README.md
examples/applications/: demo_number_theory.py  demo_trigonometry.py
examples/demos/: DEMO.py  ai_analyst_v0.py  comprehensive_demo.py  comprehensive_demo_01_arithmetic.py  demo_01_arithmetic.py  demo_02_number_theory.py  demo_03_trigonometry.py  demo_04_geometry_stats.py  demo_analytics_v03.py  demo_priority2_simple.py  f1_track_geometry.py  quick_comprehensive_demo.py  quick_demo.py  run_all_demos.py  truly_comprehensive_demo.py  truly_comprehensive_test.py
manifests/: .gitkeep  project-hooks.yaml  project-workflows.yaml
scripts/: generate_cli_executables.py  generate_comprehensive_demos.py
src/chuk_mcp_math/: __init__.py  (+3 more)
(+181 files in other folders)
